--- a/readme
+++ b/readme
@@ -8,6 +8,7 @@ sudo apt-get install python3
 sudo apt-get install python3-flask
 sudo apt-get install python3-pymysql
 sudo apt-get install python3-boto3
+sudp apt-get install python3-pillow
 
 # for running application
-sudo python3 Empapp.py
+sudo python3 EmpApp.py
